--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.3",
+    "http-server": "^14.1.0",
+    "ioredis": "^4.28.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "redis": "^4.0.2"
   }
 }
