--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=dev nodemon ./bin/www.js",
-    "prd": "cross-env NODE_ENV=production nodemon ./bin/www.js"
+    "prod": "cross-env NODE_ENV=production pm2 start pm2.conf.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "cross-env": "^7.0.3",
     "http-server": "^14.1.0",
     "ioredis": "^4.28.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "pm2": "^5.1.2",
     "redis": "^4.0.2",
     "xss": "^1.0.10"
   }
